LWCBasics/force-app/main/default/objects/Resource_Pool__c/Resource_Pool__c.object-meta.xml
<CustomObject>
    <description>Resource Details</description>
    <label>Resource Pool</label>
    <nameField>
        <label>Resource Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>