LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospective Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resource Pool</relationshipLabel>
    <relationshipName>Resource_Pool</relationshipName>
    <type>Lookup</type>
</CustomField>