LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Associate_ID__c.field-meta.xml
<CustomField>
    <fullName>Associate_ID__c</fullName>
    <label>Associate ID</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>