LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EAS Salesforce</fullName>
            </value>
            <value>
                <fullName>EAS Salesforce Consulting</fullName>
            </value>
            <value>
                <fullName>EAS Salesforce Mulesoft</fullName>
            </value>
            <value>
                <fullName>EAS Salesforce Marketing</fullName>
            </value>
            <value>
                <fullName>EAS SF Operational Excellence</fullName>
            </value>
            <value>
                <fullName>EAS SaaSfocus</fullName>
            </value>
            <value>
                <fullName>EAS Salesforce PMG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>