LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>In Months</description>
    <inlineHelpText>In Months</inlineHelpText>
    <label>Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>