LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Horizontal_Name__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Name__c</fullName>
    <label>Horizontal Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EAS Sales Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>