LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Is_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Is_Onsite__c</fullName>
    <label>Is Onsite</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>