LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Resource is Available of Assigned</description>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>