LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <label>Manager ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>