LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To which resource is expected to be tagged</description>
    <inlineHelpText>To which resource is expected to be tagged</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resource Pool</relationshipLabel>
    <relationshipName>Resource_Pool</relationshipName>
    <type>Lookup</type>
</CustomField>