LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Paycost_DepartmentID__c.field-meta.xml
<CustomField>
    <fullName>Paycost_DepartmentID__c</fullName>
    <label>Paycost DepartmentID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>