LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/SubVertical__c.field-meta.xml
<CustomField>
    <fullName>SubVertical__c</fullName>
    <label>SubVertical</label>
    <length>100</length>
    <type>Text</type>
</CustomField>