LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior/Fresher</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>