LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Utilization_Location__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Location__c</fullName>
    <label>Utilization Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>