LWCBasics/force-app/main/default/objects/Resource_Pool__c/fields/Vertical_Name__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Name__c</fullName>
    <label>Vertical Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>CommsMedia</fullName>
            </value>
            <value>
                <fullName>DIV</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>HorizontalCore</fullName>
            </value>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>MLEU</fullName>
            </value>
            <value>
                <fullName>Retail &amp; CG</fullName>
            </value>
            <value>
                <fullName>T&amp;H</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>