LWCBasics/force-app/main/default/objects/Resource_Pool__c/listViews/AllResources.listView-meta.xml
<ListView>
    <fullName>AllResources</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>isAvailable__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllResources</label>
</ListView>